--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
+    "react-id-swiper": "^4.0.0",
     "react-redux": "^8.0.7",
     "react-scripts": "5.0.1",
     "redux-thunk": "^2.4.2",
     "styled-components": "^6.0.0-rc.3",
+    "swiper": "^9.4.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
